--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/qrcode.react": "^1.0.2",
     "next": "11.1.0",
+    "qrcode.react": "^1.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
